--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/archives">Archive</a></li>
           <li><a href="/about">About</a></li>
-          <li><a href="http://twitter.com/grossjonas">Twitter</a></li>
+          <li><a href="/feed.xml">Feed</a></li>
         </ul>
       </nav>
     </div>
