--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
 	line-height: 1;
 }
-ol, ul {
+ol {
 	list-style: bullet;
 }
 blockquote, q {
