--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,13 @@
 
 <body>
   <header id="header">
-    <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
-    <p>{{ site.description }}</p>
+    <div class="left">
+      <img alt="gravatar" src="https://secure.gravatar.com/avatar/f77d91f8e6da14e2a4294bc35714ea6f?s=110&d=identicon" />
+    </div>
+    <div id="right">
+      <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
+      <p>{{ site.description }}</p>
+    </div>
   </header>
 
   <div id="page">
@@ -39,15 +44,6 @@
   <footer id="footer">
     <p class="copyright">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a>, theme by <a href="http://www.webmaster-source.com">Matt Harzewski</a></p>
   </footer>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script src="/assets/js/jquery.mobilemenu.min.js"></script>
-
-  <script>
-    $(document).ready(function(){
-      $('#sidebar nav ul').mobileMenu({'topOptionText': 'Menu', 'prependTo': '#sidebar nav'});
-    });
-  </script>
 
 </body>
 </html>
