--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@ h3 {
 #header {
 	width: 500px;
 	margin: 40px auto 50px auto;
+  display: flex;
 }
 #header h1 {
 	font-size: 32px;
@@ -124,6 +125,12 @@ h3 {
 }
 #header h1 a {
 	border: none;
+}
+#header .left{
+  flex: 0 0 25%;
+}
+#header .right{
+  flex: 1;
 }
 
 #footer {
