remove IE9 shim and sun icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,6 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width">
-
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
   <link href="/assets/css/style.css" rel="stylesheet" />
   <link href="/assets/css/colors-dark.css" rel="stylesheet" />
 </head>
@@ -19,7 +14,7 @@
       <img alt="gravatar" src="https://secure.gravatar.com/avatar/f77d91f8e6da14e2a4294bc35714ea6f?s=110&d=identicon" />
     </div>
     <div id="right">
-      <h1><a href="/"><i class="icon-sun"></i> {{ site.name }}</a></h1>
+      <h1><a href="/">{{ site.name }}</a></h1>
       <p>{{ site.description }}</p>
     </div>
   </header>
