transform to header bar (first step)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,21 +19,19 @@
     </div>
   </header>
 
-  <div id="page">
-    <div id="sidebar">
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/feed.xml">Feed</a></li>
-        </ul>
-      </nav>
-    </div>
+  <div id="navbar">
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/archives">Archive</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/feed.xml">Feed</a></li>
+      </ul>
+    </nav>
+  </div>
 
-    <div id="content">
-      {{ content }}
-    </div>
+  <div id="content">
+    {{ content }}
   </div>
 
   <footer id="footer">
