center image and heading on small screens

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
       <div class="left">
         <img alt="gravatar" src="https://secure.gravatar.com/avatar/f77d91f8e6da14e2a4294bc35714ea6f?s=110&d=identicon" />
       </div>
-      <div id="right">
+      <div class="right">
         <h1><a href="/">{{ site.name }}</a></h1>
         <p>{{ site.description }}</p>
       </div>
