start implementing sticky nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <link href="/assets/css/style.css" rel="stylesheet" />
   <link href="/assets/css/colors-dark.css" rel="stylesheet" />
+  <script src="/assets/js/script.js"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
       </div>
     </header>
 
-    <div id="navbar">
+    <div class="navbar">
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
