simplify html & css a bit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <body>
   <div id="page">
 
-    <header id="header">
+    <header>
       <div class="left">
         <img alt="gravatar" src="https://secure.gravatar.com/avatar/f77d91f8e6da14e2a4294bc35714ea6f?s=110&d=identicon" />
       </div>
@@ -22,16 +22,14 @@
       </div>
     </header>
 
-    <div class="navbar">
-      <nav>
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/archives">Archive</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/feed.xml">Feed</a></li>
-        </ul>
-      </nav>
-    </div>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/archives">Archive</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/feed.xml">Feed</a></li>
+      </ul>
+    </nav>
 
     <div id="content">
       {{ content }}
