--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,26 +107,26 @@ h3 {
 	min-width: 250px;
 }
 
-#header {
+header {
 	margin: 40px auto 50px auto;
   display: flex;
 	flex-wrap: wrap;
 }
-#header h1 {
+header h1 {
 	font-size: 32px;
 	margin-bottom: 4px;
 }
-#header h1 a {
+header h1 a {
 	border: none;
 }
-#header .left{
+header .left{
   flex: 0 0 25%;
 }
-#header .right{
+header .right{
   flex: 1;
 	min-width: 245px;
 }
-#header img{
+header img{
   border-style: solid;
   border-width: 2px;
   border-radius: 55px;
@@ -134,23 +134,23 @@ h3 {
 	margin: 0 5px 0 0;
 }
 
-.navbar {
+nav {
 	background-color: inherit;
 	top: 1px;
 	width: 90%;
 	text-align: center;
 	margin: 0px auto;
 }
-.navbar ul{
+nav ul{
 	padding: 0px;
 	display: flex;
 	justify-content: space-between;
 }
-.navbar li {
+nav li {
 	list-style: none;
 	margin: 0;
 }
-.navbar a {
+nav a {
 	border: none;
 	font-family: "Helvetica Neue", "Helvetica", serif;
 	font-size: 1.2em;
@@ -228,18 +228,18 @@ img.center {
 /*** Media Queries ***/
 @media all and (max-width: 740px) {
 
-	#page, #header, .navbar, #content, #footer {
+	#page, header, .navbar, #content, #footer {
 		width: inherit;
 		padding-left: 10px;
 		padding-right: 10px;
 	}
 
-	#header {
+	header {
 		margin-top: 10px;
 		margin-bottom: 10px;
 	}
 
-	.navbar nav select.mnav {
+	nav select.mnav {
 		display: block;
 		margin-bottom: 15px;
 	}
@@ -251,16 +251,16 @@ img.center {
 
 @media all and (max-width: 420px) {
 
-	#header {
+	header {
 		display: block;
 	}
 
-	#header.left {
+	header.left {
 		position: relative;
 		flex: none;
 	}
 
-	#header img {
+	header img {
 		display: block;
 		float: none;
 		position: relative;
@@ -268,7 +268,7 @@ img.center {
 		margin: 0 auto;
 	}
 
-	#header h1 {
+	header h1 {
 		text-align: center;
 	}
 }
